# bv9arm-chinese

./: LICENSE  README.md
branches/: diff_bv9arm.pl
branches/9.10.1-P1/: Bv9ARM-book-gbk.xml  Makefile  README.md  ddns-confgen-gbk.docbook  delv-gbk.docbook  dig-gbk.docbook  dlz-gbk.xml  dnssec-checkds-gbk.docbook  dnssec-coverage-gbk.docbook  dnssec-importkey-gbk.docbook  dnssec-keyfromlabel-gbk.docbook  dnssec-keygen-gbk.docbook  dnssec-revoke-gbk.docbook  dnssec-settime-gbk.docbook  dnssec-signzone-gbk.docbook  dnssec-verify-gbk.docbook  host-gbk.docbook  libdns-gbk.xml  managed-keys-gbk.xml  named-checkzone-gbk.docbook  named-gbk.docbook  nsec3hash-gbk.docbook  nsupdate-gbk.docbook  pkcs11-gbk.xml  pkgversion-gbk.xml  releaseinfo-gbk.xml  releaseinfo.xml  rndc-confgen-gbk.docbook  rndc-gbk.docbook  rndc.conf-gbk.docbook
branches/9.10.2/: Makefile  README-zh-gbk  count_ch_comma.pl  dig-gbk.docbook  dnssec-dsfromkey-gbk.docbook  dnssec-gbk.xml  dnssec-importkey-gbk.docbook  isc-docbook-chunk.xsl  libdns-gbk.xml  named-checkzone-gbk.docbook  named-gbk.docbook  notes-gbk.xml  notes-utf8.xml  noteversion-gbk.xml  nsupdate-gbk.docbook  releaseinfo.xml  rndc-confgen-gbk.docbook  rndc-gbk.docbook  utest.pl
branches/9.10.4/: Bv9ARM-book-gbk.xml  Bv9ARM-book-utf8.xml  Bv9ARM-gbk.aux  Bv9ARM-gbk.out  Bv9ARM-gbk.tex  Bv9ARM-gbk.tex.tmp01  Bv9ARM-gbk.toc  Bv9ARM-unicode.tex  Bv9ARM-unicode.tex.tmp01  Makefile  arpaname-gbk.docbook  arpaname-utf8.docbook  ddns-confgen-gbk.docbook  ddns-confgen-utf8.docbook  delv-gbk.docbook  delv-utf8.docbook  dig-gbk.docbook  dig-utf8.docbook  dlz-gbk.xml  dlz-utf8.xml  (+58 more)
branches/9.14.11/: Bv9ARM-book-utf8.xml  Makefile  Makefile.in  README.md  autogen.sh  configure  configure.ac  dig-utf8.docbook  dnssec-checkds-utf8.docbook  dnssec-keyfromlabel-utf8.docbook  dnssec-settime-utf8.docbook  host-utf8.docbook  mdig-utf8.docbook  named-checkconf-utf8.docbook  named.conf-utf8.docbook  notes-9.14.1-utf8.xml  notes-9.14.11-utf8.xml  notes-9.14.2-utf8.xml  notes-9.14.4-utf8.xml  notes-9.14.7-utf8.xml  notes-9.14.9-utf8.xml  notes-intro-utf8.xml  notes-numbering-utf8.xml  notes-platforms-utf8.xml  notes-utf8.xml  noteversion-utf8.xml  pkcs11-list-utf8.docbook  pkgversion-utf8.xml  preprocess_utf8.pl  releaseinfo-utf8.xml  rndc-utf8.docbook  version  version-zh_CN
branches/9.14.11/arm/: Bv9ARM-book-zh_CN.xml  Makefile.in  add_cjk_tex.pl  add_cjk_tex.pl.in  add_xelatex.pl.in  arpaname-zh_CN.docbook  ddns-confgen-zh_CN.docbook  delv-zh_CN.docbook  dlz-zh_CN.xml  dnssec-dsfromkey-zh_CN.docbook  dnssec-keygen-zh_CN.docbook  dnssec-keymgr-zh_CN.docbook  dnssec-signzone-zh_CN.docbook  dnssec-verify-zh_CN.docbook  dnssec-zh_CN.xml  dnstap-read-zh_CN.docbook  genrandom-zh_CN.docbook  logging-categories-zh_CN.xml  lwresd-zh_CN.docbook  managed-keys-zh_CN.xml  named-checkzone-zh_CN.docbook  named-journalprint-zh_CN.docbook  named-nzd2nzf-zh_CN.docbook  named-zh_CN.docbook  notes-9.14.0-zh_CN.xml  notes-9.14.10-zh_CN.xml  notes-9.14.3-zh_CN.xml  notes-9.14.6-zh_CN.xml  notes-9.14.8-zh_CN.xml  notes-bug-fixes-zh_CN.xml  notes-eol-zh_CN.xml  notes-license-zh_CN.xml  notes-sec-fixes-zh_CN.xml  notes-zh_CN.xml  pkcs11-destroy-zh_CN.docbook  pkcs11-tokens-zh_CN.docbook  pkcs11-zh_CN.xml  preprocess_utf8.pl  preprocess_utf8.pl.in  releaseinfo-zh_CN.xml.in  (+2 more)
branches/9.14.11/autom4te.cache/: output.2  output.3  output.4  output.5  requests  traces.1  traces.3  traces.4  traces.5
branches/9.18.4/: Makefile  README.md  config.status  configure.ac  libtool
branches/9.18.4/autom4te.cache/: output.2  requests
branches/9.18.4/doc/arm/: Makefile.am  advanced.inc.rst  conf.py  config-auth.inc.rst  config-intro.inc.rst  config-resolve.inc.rst  dlz.inc.rst  dns-ops.inc.rst  dnssec.inc.rst  dyndb.inc.rst  intro-security.inc.rst  introduction.inc.rst  logging-categories.inc.rst  managed-keys.inc.rst  notes.rst  pkcs11.inc.rst  platforms.inc.rst  plugins.inc.rst  reference.rst  rpz.inc.rst  security.inc.rst  troubleshooting.inc.rst  tsig.inc.rst  zones.inc.rst
branches/9.18.4/doc/dnssec-guide/: advanced-discussions.rst  commonly-asked-questions.rst  getting-started.rst  introduction.rst  recipes.rst  signing.rst  troubleshooting.rst  validation.rst
branches/9.18.4/doc/manpages/: Makefile.am  dnssec-checkds.rst  dnssec-importkey.rst  dnssec-keyfromlabel.rst  dnssec-keygen.rst  dnstap-read.rst  mdig.rst  named.conf.rst  nsupdate.rst  rndc.rst
branches/9.18.4/doc/misc/: Makefile.am
branches/9.18.4/doc/notes/: notes-9.18.0.rst  notes-9.18.4.rst
branches/9.20.0/: Makefile.am  Makefile.top  README.md  config.h.in  configure  configure.ac
branches/9.20.0/autom4te.cache/: output.0  output.1  output.2  output.3  requests
branches/9.20.0/doc/: Makefile.am
branches/9.20.0/doc/arm/: Makefile.am  build.inc.rst  catz.inc.rst  chg_fmt.pl  conf.py  config-intro.inc.rst  dlz.inc.rst  dns-ops.inc.rst  dns-security-overview.dia  dns-servers.dia  dnssec-guide.rst  dnssec.inc.rst  dyndb.inc.rst  general.rst  intro-security.inc.rst  logging-categories.inc.rst  managed-keys.inc.rst  manpages.rst  notes.rst  pkcs11.inc.rst  platforms.inc.rst  plugins.inc.rst  primary-secondary.dia  reference.rst  requirements.txt  rpz.inc.rst  security.inc.rst  sig0.inc.rst  troubleshooting.inc.rst  tsig.inc.rst  zones.inc.rst
branches/9.20.0/doc/dnssec-guide/: advanced-discussions.rst  introduction.rst  preface.rst  recipes.rst  signing.rst  troubleshooting.rst  validation.rst
branches/9.20.0/doc/manpages/: Makefile.am  arpaname.rst  delv.rst  dig.rst  dnssec-cds.rst  dnssec-keygen.rst  dnssec-ksr.rst  dnssec-revoke.rst  dnssec-signzone.rst  dnssec-verify.rst  dnstap-read.rst  filter-aaaa.rst  host.rst  mdig.rst  named-checkconf.rst  named-checkzone.rst  named-compilezone.rst  named-journalprint.rst  named-nzd2nzf.rst  named-rrchecker.rst  named.conf.rst  named.rst  nsec3hash.rst  nsupdate.rst  pkcs11-destroy.rst  pkcs11-list.rst  pkcs11-tokens.rst  rndc-confgen.rst  rndc.rst
branches/9.20.0/doc/misc/: Makefile.am  Makefile.in
branches/9.20.0/doc/notes/: notes-9.20.0.rst  notes-known-issues.rst
(+1439 files in other folders)
